--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@format-string/core": "^0.3.6",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
